--- a/Formulaire.html
+++ b/Formulaire.html
@@ -46,6 +46,12 @@
 		<select id = select-particulier></select><hr>
 		<label>Écu</label><br>
 		<select name = écu></select><br>
+		<label>Branche</label>
+		<input type = checkbox id = input-branche></input><br>
+		<div class = caché id = div-branche>
+			<label>Branche</label><br>
+			<input type = text name = branche></select><br>
+		</div>
 		<label>Couronne</label><br>
 		<select name = couronne></select><br>
 		<label>Heaume</label><br>
