--- a/Formulaire.html
+++ b/Formulaire.html
@@ -29,7 +29,7 @@
 <body onload = initialiser()>
 <header>
 	<a href = Héraldix.html><img src = Héraldix.png class = img-logo></a>
-	<h1><hr>FORMULAIRE<hr></h1>
+	<h1><hr>Formulaire<hr></h1>
 	<a href = Formulaire.html><button class = important>Formulaire</button></a><br>
 	<a href = Listes.html><button class = important>Listes</button></a>
 </header>
