--- a/Héraldix.html
+++ b/Héraldix.html
@@ -16,7 +16,7 @@
 <body>
 <header>
 	<a href = Héraldix.html><img src = Héraldix.png class = img-logo></a>
-	<h1><hr>HÉRALDIX<hr></h1>
+	<h1><hr>Héraldix<hr></h1>
 </header>
 
 <a href = Formulaire.html><button class = important>Formulaire</button></a><br>
