--- a/Armoirie.html
+++ b/Armoirie.html
@@ -9,7 +9,7 @@
 <head>
 	<title>Armoirie — Héraldix</title>
 	<meta charset = utf-8>
-	<link rel = "shortcut icon" href = Lettres/A.png>
+	<link rel = "shortcut icon" href = Caractères/A.png>
 	<link rel = stylesheet href = Héraldix.css>
 	<link rel = stylesheet href = Armoirie/Armoirie.css>
 	<script src = Héraldix.js></script>
