--- a/Formulaire.html
+++ b/Formulaire.html
@@ -9,7 +9,7 @@
 <head>
 	<title>Formulaire — Héraldix</title>
 	<meta charset = utf-8>
-	<link rel = "shortcut icon" href = Lettres/F.png>
+	<link rel = "shortcut icon" href = Caractères/F.png>
 	<link rel = stylesheet href = Héraldix.css>
 	<link rel = stylesheet href = Formulaire/Formulaire.css>
 	<script src = Héraldix.js></script>
