--- a/Héraldix.html
+++ b/Héraldix.html
@@ -9,7 +9,7 @@
 <head>
 	<title>Accueil — Héraldix</title>
 	<meta charset = utf-8>
-	<link rel = "shortcut icon" href = Lettres/H.png>
+	<link rel = "shortcut icon" href = Caractères/H.png>
 	<link rel = stylesheet href = Héraldix.css>
 	<script src = Héraldix.js></script>
 </head>
