--- a/Listes.html
+++ b/Listes.html
@@ -9,7 +9,7 @@
 <head>
 	<title>Liste — Héraldix</title>
 	<meta charset = utf-8>
-	<link rel = "shortcut icon" href = Lettres/L.png>
+	<link rel = "shortcut icon" href = Caractères/L.png>
 	<link rel = stylesheet href = Héraldix.css>
 	<link rel = stylesheet href = Listes/Listes.css>
 	<script src = Héraldix.js></script>
@@ -34,23 +34,23 @@
 	<a href = Listes.html><button class = important>Listes</button></a>
 </header>
 
-<h2 onclick = afficher(this)><hr><img src = Lettres/P.png alt = P class = img-lettrine-h2>rofils<hr></h2>
+<h2 onclick = afficher(this)><hr><img src = Caractères/P.png alt = P class = img-caractère-h2>rofils<hr></h2>
 <table class = caché id = table-profils></table>
-<h2 onclick = afficher(this)><hr><img src = Lettres/C.png alt = C class = img-lettrine-h2>ouronnes<hr></h2>
+<h2 onclick = afficher(this)><hr><img src = Caractères/C.png alt = C class = img-caractère-h2>ouronnes<hr></h2>
 <table class = caché id = table-couronnes></table>
-<h2 onclick = afficher(this)><hr><img src = Lettres/H.png alt = H class = img-lettrine-h2>eaumes<hr></h2>
+<h2 onclick = afficher(this)><hr><img src = Caractères/H.png alt = H class = img-caractère-h2>eaumes<hr></h2>
 <table class = caché id = table-heaumes></table>
-<h2 onclick = afficher(this)><hr><img src = Lettres/P.png alt = P class = img-lettrine-h2>articuliers<hr></h2>
+<h2 onclick = afficher(this)><hr><img src = Caractères/P.png alt = P class = img-caractère-h2>articuliers<hr></h2>
 <table class = caché id = table-particuliers></table>
-<h2 onclick = afficher(this)><hr><img src = Lettres/É.png alt = É class = img-lettrine-h2>cus<hr></h2>
+<h2 onclick = afficher(this)><hr><img src = Caractères/É.png alt = É class = img-caractère-h2>cus<hr></h2>
 <table class = caché id = table-écus></table>
-<h2 onclick = afficher(this)><hr><img src = Lettres/P.png alt = P class = img-lettrine-h2>ortants<hr></h2>
+<h2 onclick = afficher(this)><hr><img src = Caractères/P.png alt = P class = img-caractère-h2>ortants<hr></h2>
 <table class = caché id = table-portants></table>
-<h2 onclick = afficher(this)><hr><img src = Lettres/M.png alt = M class = img-lettrine-h2>anteaux<hr></h2>
+<h2 onclick = afficher(this)><hr><img src = Caractères/M.png alt = M class = img-caractère-h2>anteaux<hr></h2>
 <table class = caché id = table-manteaux></table>
-<h2 onclick = afficher(this)><hr><img src = Lettres/C.png alt = C class = img-lettrine-h2>olliers<hr></h2>
+<h2 onclick = afficher(this)><hr><img src = Caractères/C.png alt = C class = img-caractère-h2>olliers<hr></h2>
 <table class = caché id = table-colliers></table>
-<h2 onclick = afficher(this)><hr><img src = Lettres/B.png alt = B class = img-lettrine-h2>âtons<hr></h2>
+<h2 onclick = afficher(this)><hr><img src = Caractères/B.png alt = B class = img-caractère-h2>âtons<hr></h2>
 <table class = caché id = table-bâtons></table>
 
 </body>
