--- a/Listes.html
+++ b/Listes.html
@@ -9,48 +9,48 @@
 <head>
 	<title>Liste — Héraldix</title>
 	<meta charset = utf-8>
-	<link rel = "shortcut icon" href = Caractères/L.png>
-	<link rel = stylesheet href = Héraldix.css>
-	<link rel = stylesheet href = Listes/Listes.css>
-	<script src = Héraldix.js></script>
-	<script src = Formulaire/Profils.js></script>
-	<script src = Formulaire/Particuliers.js></script>
+	<link rel = "shortcut icon" href = caracteres/L.png>
+	<link rel = stylesheet href = heraldix.css>
+	<link rel = stylesheet href = listes/listes.css>
+	<script src = heraldix.js></script>
+	<script src = formulaire/profils.js></script>
+	<script src = formulaire/particuliers.js></script>
 	<script src = Liens.js></script>
-	<script src = Liens/Bâtons.js></script>
-	<script src = Liens/Colliers.js></script>
-	<script src = Liens/Couronnes.js></script>
-	<script src = Liens/Drapeaux.js></script>
-	<script src = Liens/Écus.js></script>
-	<script src = Liens/Heaumes.js></script>
-	<script src = Liens/Manteaux.js></script>
-	<script src = Liens/Portants.js></script>
-	<script src = Listes/Listes.js></script>
+	<script src = liens/batons.js></script>
+	<script src = liens/colliers.js></script>
+	<script src = liens/couronnes.js></script>
+	<script src = liens/drapeaux.js></script>
+	<script src = liens/ecus.js></script>
+	<script src = liens/heaumes.js></script>
+	<script src = liens/manteaux.js></script>
+	<script src = liens/portants.js></script>
+	<script src = listes/listes.js></script>
 </head>
 <body onload = initialiser()>
 <header>
-	<a href = Héraldix.html><img src = Héraldix.png class = img-logo></a>
+	<a href = heraldix.html><img src = heraldix.png class = img-logo></a>
 	<h1><hr>Listes<hr></h1>
-	<a href = Formulaire.html><button class = important>Formulaire</button></a><br>
-	<a href = Listes.html><button class = important>Listes</button></a>
+	<a href = formulaire.html><button class = important>Formulaire</button></a><br>
+	<a href = listes.html><button class = important>Listes</button></a>
 </header>
 
-<h2 onclick = afficher(this)><hr><img src = Caractères/P.png alt = P class = img-caractère-h2>rofils<hr></h2>
+<h2 onclick = afficher(this)><hr><img src = caracteres/P.png alt = P class = img-caractère-h2>rofils<hr></h2>
 <table class = caché id = table-profils></table>
-<h2 onclick = afficher(this)><hr><img src = Caractères/C.png alt = C class = img-caractère-h2>ouronnes<hr></h2>
+<h2 onclick = afficher(this)><hr><img src = caracteres/C.png alt = C class = img-caractère-h2>ouronnes<hr></h2>
 <table class = caché id = table-couronnes></table>
-<h2 onclick = afficher(this)><hr><img src = Caractères/H.png alt = H class = img-caractère-h2>eaumes<hr></h2>
+<h2 onclick = afficher(this)><hr><img src = caracteres/H.png alt = H class = img-caractère-h2>eaumes<hr></h2>
 <table class = caché id = table-heaumes></table>
-<h2 onclick = afficher(this)><hr><img src = Caractères/P.png alt = P class = img-caractère-h2>articuliers<hr></h2>
+<h2 onclick = afficher(this)><hr><img src = caracteres/P.png alt = P class = img-caractère-h2>articuliers<hr></h2>
 <table class = caché id = table-particuliers></table>
-<h2 onclick = afficher(this)><hr><img src = Caractères/É.png alt = É class = img-caractère-h2>cus<hr></h2>
+<h2 onclick = afficher(this)><hr><img src = caracteres/É.png alt = É class = img-caractère-h2>cus<hr></h2>
 <table class = caché id = table-écus></table>
-<h2 onclick = afficher(this)><hr><img src = Caractères/P.png alt = P class = img-caractère-h2>ortants<hr></h2>
+<h2 onclick = afficher(this)><hr><img src = caracteres/P.png alt = P class = img-caractère-h2>ortants<hr></h2>
 <table class = caché id = table-portants></table>
-<h2 onclick = afficher(this)><hr><img src = Caractères/M.png alt = M class = img-caractère-h2>anteaux<hr></h2>
+<h2 onclick = afficher(this)><hr><img src = caracteres/M.png alt = M class = img-caractère-h2>anteaux<hr></h2>
 <table class = caché id = table-manteaux></table>
-<h2 onclick = afficher(this)><hr><img src = Caractères/C.png alt = C class = img-caractère-h2>olliers<hr></h2>
+<h2 onclick = afficher(this)><hr><img src = caracteres/C.png alt = C class = img-caractère-h2>olliers<hr></h2>
 <table class = caché id = table-colliers></table>
-<h2 onclick = afficher(this)><hr><img src = Caractères/B.png alt = B class = img-caractère-h2>âtons<hr></h2>
+<h2 onclick = afficher(this)><hr><img src = caracteres/B.png alt = B class = img-caractère-h2>âtons<hr></h2>
 <table class = caché id = table-bâtons></table>
 
 </body>
