--- a/Armoirie.html
+++ b/Armoirie.html
@@ -9,27 +9,27 @@
 <head>
 	<title>Armoirie — Héraldix</title>
 	<meta charset = utf-8>
-	<link rel = "shortcut icon" href = Caractères/A.png>
-	<link rel = stylesheet href = Héraldix.css>
-	<link rel = stylesheet href = Armoirie/Armoirie.css>
-	<script src = Héraldix.js></script>
+	<link rel = "shortcut icon" href = caracteres/A.png>
+	<link rel = stylesheet href = heraldix.css>
+	<link rel = stylesheet href = armoirie/armoirie.css>
+	<script src = heraldix.js></script>
 	<script src = Liens.js></script>
-	<script src = Liens/Bâtons.js></script>
-	<script src = Liens/Colliers.js></script>
-	<script src = Liens/Couronnes.js></script>
-	<script src = Liens/Drapeaux.js></script>
-	<script src = Liens/Écus.js></script>
-	<script src = Liens/Heaumes.js></script>
-	<script src = Liens/Manteaux.js></script>
-	<script src = Liens/Portants.js></script>
-	<script src = Armoirie/Armoirie.js></script>
+	<script src = liens/batons.js></script>
+	<script src = liens/colliers.js></script>
+	<script src = liens/couronnes.js></script>
+	<script src = liens/drapeaux.js></script>
+	<script src = liens/ecus.js></script>
+	<script src = liens/heaumes.js></script>
+	<script src = liens/manteaux.js></script>
+	<script src = liens/portants.js></script>
+	<script src = armoirie/armoirie.js></script>
 </head>
 <body onload = initialiser()>
 <header>
-	<a href = Héraldix.html><img src = Héraldix.png class = img-logo></a>
+	<a href = heraldix.html><img src = heraldix.png class = img-logo></a>
 	<h1></h1>
-	<a href = Formulaire.html><button class = important>Formulaire</button></a><br>
-	<a href = Listes.html><button class = important>Listes</button></a><br>
+	<a href = formulaire.html><button class = important>Formulaire</button></a><br>
+	<a href = listes.html><button class = important>Listes</button></a><br>
 	<button onclick = history.back()>↶ Page précédente</button><br>
 	<button onclick = sauvegarder() class = important>Sauvegarder</button><br>
 	<button onclick = paramètres() id = button-paramètres>↓ Paramètres ↓</button>
