--- a/Formulaire.html
+++ b/Formulaire.html
@@ -9,34 +9,34 @@
 <head>
 	<title>Formulaire — Héraldix</title>
 	<meta charset = utf-8>
-	<link rel = "shortcut icon" href = Caractères/F.png>
-	<link rel = stylesheet href = Héraldix.css>
-	<link rel = stylesheet href = Formulaire/Formulaire.css>
-	<script src = Héraldix.js></script>
-	<script src = Formulaire/Formulaire.js></script>
-	<script src = Formulaire/Profils.js></script>
-	<script src = Formulaire/Particuliers.js></script>
+	<link rel = "shortcut icon" href = caracteres/F.png>
+	<link rel = stylesheet href = heraldix.css>
+	<link rel = stylesheet href = formulaire/Formulaire.css>
+	<script src = heraldix.js></script>
+	<script src = formulaire/Formulaire.js></script>
+	<script src = formulaire/profils.js></script>
+	<script src = formulaire/particuliers.js></script>
 	<script src = Liens.js></script>
-	<script src = Liens/Bâtons.js></script>
-	<script src = Liens/Colliers.js></script>
-	<script src = Liens/Couronnes.js></script>
-	<script src = Liens/Drapeaux.js></script>
-	<script src = Liens/Écus.js></script>
-	<script src = Liens/Heaumes.js></script>
-	<script src = Liens/Manteaux.js></script>
-	<script src = Liens/Portants.js></script>
+	<script src = liens/batons.js></script>
+	<script src = liens/colliers.js></script>
+	<script src = liens/couronnes.js></script>
+	<script src = liens/drapeaux.js></script>
+	<script src = liens/ecus.js></script>
+	<script src = liens/heaumes.js></script>
+	<script src = liens/manteaux.js></script>
+	<script src = liens/portants.js></script>
 </head>
 <body onload = initialiser()>
 <header>
-	<a href = Héraldix.html><img src = Héraldix.png class = img-logo></a>
+	<a href = heraldix.html><img src = heraldix.png class = img-logo></a>
 	<h1><hr>Formulaire<hr></h1>
-	<a href = Formulaire.html><button class = important>Formulaire</button></a><br>
-	<a href = Listes.html><button class = important>Listes</button></a>
+	<a href = formulaire.html><button class = important>Formulaire</button></a><br>
+	<a href = listes.html><button class = important>Listes</button></a>
 </header>
 
 <fieldset>
 	<legend>Description héraldique</legend>
-	<form action = Armoirie.html>
+	<form action = armoirie.html>
 		<label class = label-filtre>Catégorie</label><br>
 		<select id = select-catégorie></select><br>
 		<img id = img-catégorie><br>
