--- a/armoirie.html
+++ b/armoirie.html
@@ -13,7 +13,7 @@
 	<link rel = stylesheet href = heraldix.css>
 	<link rel = stylesheet href = armoirie/armoirie.css>
 	<script src = heraldix.js></script>
-	<script src = Liens.js></script>
+	<script src = liens.js></script>
 	<script src = liens/batons.js></script>
 	<script src = liens/colliers.js></script>
 	<script src = liens/couronnes.js></script>
@@ -37,7 +37,7 @@
 </header>
 
 <div class = div-flex id = div-contenu>
-	<div id = div-manteau><img src = Armoirie/Vide.png id = img-manteau></div>
+	<div id = div-manteau><img src = armoirie/vide.png id = img-manteau></div>
 	<div id = div-autre>
 		<div id = div-cri><span id = span-cri>0</span></div>
 		<div id = div-couronne-manteau><img id = img-couronne-manteau></div>
@@ -45,11 +45,11 @@
 		<div id = div-heaume><img id = img-heaume></div>
 		<div class = div-flex>
 			<div id = div-portant-dextre>
-				<img src = Armoirie/Vide.png id = img-portant-dextre onclick = inverser(this.style)>
+				<img src = armoirie/vide.png id = img-portant-dextre onclick = inverser(this.style)>
 			</div>
-			<div class = div-flex><img src = Armoirie/Vide.png id = img-collier><img id = img-écu></div>
+			<div class = div-flex><img src = armoirie/vide.png id = img-collier><img id = img-écu></div>
 			<div id = div-portant-senestre>
-				<img src = Armoirie/Vide.png id = img-portant-senestre onclick = inverser(this.style)>
+				<img src = armoirie/vide.png id = img-portant-senestre onclick = inverser(this.style)>
 			</div>
 		</div>
 		<div id = div-devise><span id = span-devise>0</span></div>
@@ -57,8 +57,8 @@
 </div>
 
 <footer>
-	<a href = https://le-cavalier-riant.github.io/Heraldix><img src = Armoirie/Logo.png id = img-logo></a>
-	<span>© Héraldix 2024 — <a href = https://github.com/le-cavalier-riant><span>@le-cavalier-riant</span></a></span>
+	<a href = https://le-cavalier-riant.github.io/heraldix/heraldix.html><img src = armoirie/logo.png id = img-logo></a>
+	<span>© Héraldix — <a href = https://github.com/lecavalierriant><span>@lecavalierriant</span></a></span>
 </footer>
 
 </body>
