--- a/listes.html
+++ b/listes.html
@@ -15,7 +15,7 @@
 	<script src = heraldix.js></script>
 	<script src = formulaire/profils.js></script>
 	<script src = formulaire/particuliers.js></script>
-	<script src = Liens.js></script>
+	<script src = liens.js></script>
 	<script src = liens/batons.js></script>
 	<script src = liens/colliers.js></script>
 	<script src = liens/couronnes.js></script>
