--- a/formulaire.html
+++ b/formulaire.html
@@ -16,7 +16,7 @@
 	<script src = formulaire/Formulaire.js></script>
 	<script src = formulaire/profils.js></script>
 	<script src = formulaire/particuliers.js></script>
-	<script src = Liens.js></script>
+	<script src = liens.js></script>
 	<script src = liens/batons.js></script>
 	<script src = liens/colliers.js></script>
 	<script src = liens/couronnes.js></script>
