--- a/armoirie.html
+++ b/armoirie.html
@@ -57,8 +57,8 @@
 </div>
 
 <footer>
-	<a href = https://le-cavalier-riant.github.io/heraldix/heraldix.html><img src = armoirie/logo.png id = img-logo></a>
-	<span>© Héraldix — <a href = https://github.com/lecavalierriant><span>@lecavalierriant</span></a></span>
+	<a href = https://lecavalierriant.github.io/heraldix/heraldix.html><img src = armoirie/logo.png id = img-logo></a>
+	<span><a href = https://github.com/lecavalierriant><span>© 𝔏𝔢 ℭ𝔞𝔳𝔞𝔩𝔦𝔢𝔯 ℜ𝔦𝔞𝔫𝔱</span></a></span>
 </footer>
 
 </body>
