--- a/heraldix.html
+++ b/heraldix.html
@@ -73,9 +73,7 @@
 <a href = armoirie.html?écu=RF+Bretagne&couronne=RF+Duc&heaume=RF+Prince&devise=Potius+mori+quam+fœdari>
 	<button>Duc de Bretagne</button>
 </a>
-<p>
-	Application créée par <a href = https://github.com/le-cavalier-riant>@le-cavalier-riant</a>.
-</p>
+<p>Application créée par <a href = https://github.com/lecavalierriant>𝔏𝔢 ℭ𝔞𝔳𝔞𝔩𝔦𝔢𝔯 ℜ𝔦𝔞𝔫𝔱</a>.</p>
 
 </body>
 </html>
