--- a/heraldix.html
+++ b/heraldix.html
@@ -1,9 +1,3 @@
-<!-- ============================================================================================================== -->
-<!--                                                                                                                -->
-<!--                                                   Héraldix                                                     -->
-<!--                                                                                                                -->
-<!-- ============================================================================================================== -->
-
 <!doctype html>
 <html lang = fr>
 <head>
@@ -15,7 +9,7 @@
 </head>
 <body>
 <header>
-	<a href = heraldix.html><img src = heraldix.png class = img-logo></a>
+	<a href = heraldix.html><img src = heraldix.png class = logo></a>
 	<h1><hr>Héraldix<hr></h1>
 </header>
 
@@ -77,9 +71,3 @@
 
 </body>
 </html>
-
-<!-- ============================================================================================================== -->
-<!--                                                                                                                -->
-<!--                                                   Héraldix                                                     -->
-<!--                                                                                                                -->
-<!-- ============================================================================================================== -->
