--- a/armoirie.html
+++ b/armoirie.html
@@ -1,9 +1,3 @@
-<!-- ============================================================================================================== -->
-<!--                                                                                                                -->
-<!--                                                   Héraldix                                                     -->
-<!--                                                                                                                -->
-<!-- ============================================================================================================== -->
-
 <!doctype html>
 <html lang = fr>
 <head>
@@ -26,7 +20,7 @@
 </head>
 <body onload = initialiser()>
 <header>
-	<a href = heraldix.html><img src = heraldix.png class = img-logo></a>
+	<a href = heraldix.html><img src = heraldix.png class = logo></a>
 	<h1></h1>
 	<a href = formulaire.html><button class = important>Formulaire</button></a><br>
 	<a href = listes.html><button class = important>Listes</button></a><br>
@@ -36,18 +30,18 @@
 	<table class = caché id = table-paramètres></table>
 </header>
 
-<div class = div-flex id = div-contenu>
+<div class = flex id = div-contenu>
 	<div id = div-manteau><img src = armoirie/vide.png id = img-manteau></div>
-	<div id = div-autre>
+	<div id = autre>
 		<div id = div-cri><span id = span-cri>0</span></div>
 		<div id = div-couronne-manteau><img id = img-couronne-manteau></div>
 		<div id = div-couronne><img id = img-couronne></div>
 		<div id = div-heaume><img id = img-heaume></div>
-		<div class = div-flex>
+		<div class = flex>
 			<div id = div-portant-dextre>
 				<img src = armoirie/vide.png id = img-portant-dextre onclick = inverser(this.style)>
 			</div>
-			<div class = div-flex><img src = armoirie/vide.png id = img-collier><img id = img-écu></div>
+			<div class = flex><img src = armoirie/vide.png id = img-collier><img id = img-écu></div>
 			<div id = div-portant-senestre>
 				<img src = armoirie/vide.png id = img-portant-senestre onclick = inverser(this.style)>
 			</div>
@@ -57,15 +51,9 @@
 </div>
 
 <footer>
-	<a href = https://lecavalierriant.github.io/heraldix/heraldix.html><img src = armoirie/logo.png id = img-logo></a>
+	<a href = https://lecavalierriant.github.io/heraldix/heraldix.html><img src = armoirie/logo.png id = logo></a>
 	<span><a href = https://github.com/lecavalierriant><span>© 𝔏𝔢 ℭ𝔞𝔳𝔞𝔩𝔦𝔢𝔯 ℜ𝔦𝔞𝔫𝔱</span></a></span>
 </footer>
 
 </body>
 </html>
-
-<!-- ============================================================================================================== -->
-<!--                                                                                                                -->
-<!--                                                   Héraldix                                                     -->
-<!--                                                                                                                -->
-<!-- ============================================================================================================== -->
