--- a/formulaire.html
+++ b/formulaire.html
@@ -1,9 +1,3 @@
-<!-- ============================================================================================================== -->
-<!--                                                                                                                -->
-<!--                                                   Héraldix                                                     -->
-<!--                                                                                                                -->
-<!-- ============================================================================================================== -->
-
 <!doctype html>
 <html lang = fr>
 <head>
@@ -28,7 +22,7 @@
 </head>
 <body onload = initialiser()>
 <header>
-	<a href = heraldix.html><img src = heraldix.png class = img-logo></a>
+	<a href = heraldix.html><img src = heraldix.png class = logo></a>
 	<h1><hr>Formulaire<hr></h1>
 	<a href = formulaire.html><button class = important>Formulaire</button></a><br>
 	<a href = listes.html><button class = important>Listes</button></a>
@@ -37,12 +31,12 @@
 <fieldset>
 	<legend>Description héraldique</legend>
 	<form action = armoirie.html>
-		<label class = label-filtre>Catégorie</label><br>
+		<label class = filtre>Catégorie</label><br>
 		<select id = select-catégorie></select><br>
 		<img id = img-catégorie><br>
-		<label class = label-filtre>Profil</label><br>
+		<label class = filtre>Profil</label><br>
 		<select id = select-profil></select><br>
-		<label class = label-filtre>Particulier</label><br>
+		<label class = filtre>Particulier</label><br>
 		<select id = select-particulier></select><hr>
 		<label>Écu</label><br>
 		<select name = écu></select><br>
@@ -79,9 +73,3 @@
 
 </body>
 </html>
-
-<!-- ============================================================================================================== -->
-<!--                                                                                                                -->
-<!--                                                   Héraldix                                                     -->
-<!--                                                                                                                -->
-<!-- ============================================================================================================== -->
