--- a/listes.html
+++ b/listes.html
@@ -1,9 +1,3 @@
-<!-- ============================================================================================================== -->
-<!--                                                                                                                -->
-<!--                                                   Héraldix                                                     -->
-<!--                                                                                                                -->
-<!-- ============================================================================================================== -->
-
 <!doctype html>
 <html lang = fr>
 <head>
@@ -28,36 +22,30 @@
 </head>
 <body onload = initialiser()>
 <header>
-	<a href = heraldix.html><img src = heraldix.png class = img-logo></a>
+	<a href = heraldix.html><img src = heraldix.png class = logo></a>
 	<h1><hr>Listes<hr></h1>
 	<a href = formulaire.html><button class = important>Formulaire</button></a><br>
 	<a href = listes.html><button class = important>Listes</button></a>
 </header>
 
-<h2 onclick = afficher(this)><hr><img src = caracteres/P.png alt = P class = img-caractère-h2>rofils<hr></h2>
+<h2 onclick = afficher(this)><hr><img src = caracteres/P.png alt = P class = caractère>rofils<hr></h2>
 <table class = caché id = table-profils></table>
-<h2 onclick = afficher(this)><hr><img src = caracteres/C.png alt = C class = img-caractère-h2>ouronnes<hr></h2>
+<h2 onclick = afficher(this)><hr><img src = caracteres/C.png alt = C class = caractère>ouronnes<hr></h2>
 <table class = caché id = table-couronnes></table>
-<h2 onclick = afficher(this)><hr><img src = caracteres/H.png alt = H class = img-caractère-h2>eaumes<hr></h2>
+<h2 onclick = afficher(this)><hr><img src = caracteres/H.png alt = H class = caractère>eaumes<hr></h2>
 <table class = caché id = table-heaumes></table>
-<h2 onclick = afficher(this)><hr><img src = caracteres/P.png alt = P class = img-caractère-h2>articuliers<hr></h2>
+<h2 onclick = afficher(this)><hr><img src = caracteres/P.png alt = P class = caractère>articuliers<hr></h2>
 <table class = caché id = table-particuliers></table>
-<h2 onclick = afficher(this)><hr><img src = caracteres/É.png alt = É class = img-caractère-h2>cus<hr></h2>
+<h2 onclick = afficher(this)><hr><img src = caracteres/É.png alt = É class = caractère>cus<hr></h2>
 <table class = caché id = table-écus></table>
-<h2 onclick = afficher(this)><hr><img src = caracteres/P.png alt = P class = img-caractère-h2>ortants<hr></h2>
+<h2 onclick = afficher(this)><hr><img src = caracteres/P.png alt = P class = caractère>ortants<hr></h2>
 <table class = caché id = table-portants></table>
-<h2 onclick = afficher(this)><hr><img src = caracteres/M.png alt = M class = img-caractère-h2>anteaux<hr></h2>
+<h2 onclick = afficher(this)><hr><img src = caracteres/M.png alt = M class = caractère>anteaux<hr></h2>
 <table class = caché id = table-manteaux></table>
-<h2 onclick = afficher(this)><hr><img src = caracteres/C.png alt = C class = img-caractère-h2>olliers<hr></h2>
+<h2 onclick = afficher(this)><hr><img src = caracteres/C.png alt = C class = caractère>olliers<hr></h2>
 <table class = caché id = table-colliers></table>
-<h2 onclick = afficher(this)><hr><img src = caracteres/B.png alt = B class = img-caractère-h2>âtons<hr></h2>
+<h2 onclick = afficher(this)><hr><img src = caracteres/B.png alt = B class = caractère>âtons<hr></h2>
 <table class = caché id = table-bâtons></table>
 
 </body>
 </html>
-
-<!-- ============================================================================================================== -->
-<!--                                                                                                                -->
-<!--                                                   Héraldix                                                     -->
-<!--                                                                                                                -->
-<!-- ============================================================================================================== -->
