--- a/armoirie.html
+++ b/armoirie.html
@@ -1,58 +1,58 @@
 <!doctype html>
-<html lang = fr>
+<html lang = "fr">
 <head>
 	<title>Armoirie — Héraldix</title>
-	<meta charset = utf-8>
-	<link rel = "shortcut icon" href = caracteres/A.png>
-	<link rel = stylesheet href = heraldix.css>
-	<link rel = stylesheet href = armoirie/armoirie.css>
-	<script src = heraldix.js></script>
-	<script src = liens.js></script>
-	<script src = liens/batons.js></script>
-	<script src = liens/colliers.js></script>
-	<script src = liens/couronnes.js></script>
-	<script src = liens/drapeaux.js></script>
-	<script src = liens/ecus.js></script>
-	<script src = liens/heaumes.js></script>
-	<script src = liens/manteaux.js></script>
-	<script src = liens/portants.js></script>
-	<script src = armoirie/armoirie.js></script>
+	<meta charset = "utf-8">
+	<link rel = "icon" href = "caracteres/A.png">
+	<link rel = "stylesheet" href = "heraldix.css">
+	<link rel = "stylesheet" href = "armoirie/armoirie.css">
+	<script src = "heraldix.js"></script>
+	<script src = "liens.js"></script>
+	<script src = "liens/batons.js"></script>
+	<script src = "liens/colliers.js"></script>
+	<script src = "liens/couronnes.js"></script>
+	<script src = "liens/drapeaux.js"></script>
+	<script src = "liens/ecus.js"></script>
+	<script src = "liens/heaumes.js"></script>
+	<script src = "liens/manteaux.js"></script>
+	<script src = "liens/portants.js"></script>
+	<script src = "armoirie/armoirie.js"></script>
 </head>
-<body onload = initialiser()>
+<body onload = "initialiser()">
 <header>
-	<a href = heraldix.html><img src = heraldix.png class = logo></a>
+	<a href = "heraldix.html"><img src = "heraldix.png" class = "logo"></a>
 	<h1></h1>
-	<a href = formulaire.html><button class = important>Formulaire</button></a><br>
-	<a href = listes.html><button class = important>Listes</button></a><br>
-	<button onclick = history.back()>↶ Page précédente</button><br>
-	<button onclick = sauvegarder() class = important>Sauvegarder</button><br>
-	<button onclick = paramètres() id = button-paramètres>↓ Paramètres ↓</button>
-	<table class = caché id = table-paramètres></table>
+	<a href = "formulaire.html"><button class = "important">Formulaire</button></a><br>
+	<a href = "listes.html"><button class = "important">Listes</button></a><br>
+	<button onclick = "history.back()">↶ Page précédente</button><br>
+	<button onclick = "sauvegarder()" class = "important">Sauvegarder</button><br>
+	<button onclick = "paramètres()" id = "button-paramètres">↓ Paramètres ↓</button>
+	<table class = "caché" id = "table-paramètres"></table>
 </header>
 
-<div class = flex id = div-contenu>
-	<div id = div-manteau><img src = armoirie/vide.png id = img-manteau></div>
-	<div id = autre>
-		<div id = div-cri><span id = span-cri>0</span></div>
-		<div id = div-couronne-manteau><img id = img-couronne-manteau></div>
-		<div id = div-couronne><img id = img-couronne></div>
-		<div id = div-heaume><img id = img-heaume></div>
-		<div class = flex>
-			<div id = div-portant-dextre>
-				<img src = armoirie/vide.png id = img-portant-dextre onclick = inverser(this.style)>
+<div class = "flex" id = "div-contenu">
+	<div id = "div-manteau"><img src = "armoirie/vide.png" id = "img-manteau"></div>
+	<div id = "autre">
+		<div id = "div-cri"><span id = "span-cri">0</span></div>
+		<div id = "div-couronne-manteau"><img id = "img-couronne-manteau"></div>
+		<div id = "div-couronne"><img id = "img-couronne"></div>
+		<div id = "div-heaume"><img id = "img-heaume"></div>
+		<div class = "flex">
+			<div id = "div-portant-dextre">
+				<img src = "armoirie/vide.png" id = "img-portant-dextre" onclick = inverser(this.style)>
 			</div>
-			<div class = flex><img src = armoirie/vide.png id = img-collier><img id = img-écu></div>
-			<div id = div-portant-senestre>
-				<img src = armoirie/vide.png id = img-portant-senestre onclick = inverser(this.style)>
+			<div class = "flex"><img src = "armoirie/vide.png" id = "img-collier"><img id = "img-écu"></div>
+			<div id = "div-portant-senestre">
+				<img src = "armoirie/vide.png" id = "img-portant-senestre" onclick = "inverser(this.style)">
 			</div>
 		</div>
-		<div id = div-devise><span id = span-devise>0</span></div>
+		<div id = "div-devise"><span id = "span-devise">0</span></div>
 	</div>
 </div>
 
 <footer>
-	<a href = https://lecavalierriant.github.io/heraldix/heraldix.html><img src = armoirie/logo.png id = logo></a>
-	<span><a href = https://github.com/lecavalierriant><span>© 𝔏𝔢 ℭ𝔞𝔳𝔞𝔩𝔦𝔢𝔯 ℜ𝔦𝔞𝔫𝔱</span></a></span>
+	<a href = "https://lecavalierriant.github.io/heraldix/heraldix.html"><img src = "armoirie/logo.png" id = "logo"></a>
+	<span><a href = "https://github.com/lecavalierriant"><span>© 𝔏𝔢 ℭ𝔞𝔳𝔞𝔩𝔦𝔢𝔯 ℜ𝔦𝔞𝔫𝔱</span></a></span>
 </footer>
 
 </body>
