--- a/heraldix.html
+++ b/heraldix.html
@@ -1,20 +1,22 @@
 <!doctype html>
-<html lang = fr>
+<html lang = "fr">
 <head>
 	<title>Accueil — Héraldix</title>
-	<meta charset = utf-8>
-	<link rel = "shortcut icon" href = caracteres/H.png>
-	<link rel = stylesheet href = heraldix.css>
-	<script src = heraldix.js></script>
+	<meta charset = "utf-8">
+	<link rel = "icon" href = "caracteres/H.png">
+	<link rel = "stylesheet" href = "heraldix.css">
+	<script src = "heraldix.js"></script>
 </head>
 <body>
 <header>
-	<a href = heraldix.html><img src = heraldix.png class = logo></a>
+	<a href = "heraldix.html"><img src = "heraldix.png" class = "logo"></a>
 	<h1><hr>Héraldix<hr></h1>
 </header>
 
-<a href = formulaire.html><button class = important>Formulaire</button></a><br>
-<a href = listes.html><button class = important>Listes</button></a><br>
+<a href = "formulaire.html"><button class = "important">Formulaire</button></a>
+<br>
+<a href = "listes.html"><button class = "important">Listes</button></a>
+<br>
 <a
 	href = "
 		armoirie.html?
@@ -31,7 +33,8 @@
 	"
 >
 	<button>Roi de France</button>
-</a><br>
+</a>
+<br>
 <a
 	href = "
 		armoirie.html?
@@ -44,7 +47,8 @@
 	"
 >
 	<button>Marquis de Chavagnac</button>
-</a><br>
+</a>
+<br>
 <a
 	href = "
 		armoirie.html?
@@ -60,14 +64,16 @@
 	"
 >
 	<button>Prince de Broglie</button>
-</a><br>
-<a href = armoirie.html?écu=VF+Paris&couronne=VF+Capitale&devise=Fluctuat+nec+mergitur>
+</a>
+<br>
+<a href = "armoirie.html?écu=VF+Paris&couronne=VF+Capitale&devise=Fluctuat+nec+mergitur">
 	<button>Ville de Paris</button>
-</a><br>
-<a href = armoirie.html?écu=RF+Bretagne&couronne=RF+Duc&heaume=RF+Prince&devise=Potius+mori+quam+fœdari>
+</a>
+<br>
+<a href = "armoirie.html?écu=RF+Bretagne&couronne=RF+Duc&heaume=RF+Prince&devise=Potius+mori+quam+fœdari">
 	<button>Duc de Bretagne</button>
 </a>
-<p>Application créée par <a href = https://github.com/lecavalierriant>𝔏𝔢 ℭ𝔞𝔳𝔞𝔩𝔦𝔢𝔯 ℜ𝔦𝔞𝔫𝔱</a>.</p>
+<p>Application créée par <a href = "https://github.com/lecavalierriant">𝔏𝔢 ℭ𝔞𝔳𝔞𝔩𝔦𝔢𝔯 ℜ𝔦𝔞𝔫𝔱</a>.</p>
 
 </body>
 </html>
