--- a/listes.html
+++ b/listes.html
@@ -1,51 +1,51 @@
 <!doctype html>
-<html lang = fr>
+<html lang = "fr">
 <head>
 	<title>Liste — Héraldix</title>
-	<meta charset = utf-8>
-	<link rel = "shortcut icon" href = caracteres/L.png>
-	<link rel = stylesheet href = heraldix.css>
-	<link rel = stylesheet href = listes/listes.css>
-	<script src = heraldix.js></script>
-	<script src = formulaire/profils.js></script>
-	<script src = formulaire/particuliers.js></script>
-	<script src = liens.js></script>
-	<script src = liens/batons.js></script>
-	<script src = liens/colliers.js></script>
-	<script src = liens/couronnes.js></script>
-	<script src = liens/drapeaux.js></script>
-	<script src = liens/ecus.js></script>
-	<script src = liens/heaumes.js></script>
-	<script src = liens/manteaux.js></script>
-	<script src = liens/portants.js></script>
-	<script src = listes/listes.js></script>
+	<meta charset = "utf-8">
+	<link rel = "icon" href = "caracteres/L.png">
+	<link rel = "stylesheet" href = "heraldix.css">
+	<link rel = "stylesheet" href = "listes/listes.css">
+	<script src = "heraldix.js"></script>
+	<script src = "formulaire/profils.js"></script>
+	<script src = "formulaire/particuliers.js"></script>
+	<script src = "liens.js"></script>
+	<script src = "liens/batons.js"></script>
+	<script src = "liens/colliers.js"></script>
+	<script src = "liens/couronnes.js"></script>
+	<script src = "liens/drapeaux.js"></script>
+	<script src = "liens/ecus.js"></script>
+	<script src = "liens/heaumes.js"></script>
+	<script src = "liens/manteaux.js"></script>
+	<script src = "liens/portants.js"></script>
+	<script src = "listes/listes.js"></script>
 </head>
-<body onload = initialiser()>
+<body onload = "initialiser()">
 <header>
-	<a href = heraldix.html><img src = heraldix.png class = logo></a>
+	<a href = "heraldix.html"><img src = "heraldix.png" class = "logo"></a>
 	<h1><hr>Listes<hr></h1>
-	<a href = formulaire.html><button class = important>Formulaire</button></a><br>
-	<a href = listes.html><button class = important>Listes</button></a>
+	<a href = "formulaire.html"><button class = "important">Formulaire</button></a><br>
+	<a href = "listes.html"><button class = "important">Listes</button></a>
 </header>
 
-<h2 onclick = afficher(this)><hr><img src = caracteres/P.png alt = P class = caractère>rofils<hr></h2>
-<table class = caché id = table-profils></table>
-<h2 onclick = afficher(this)><hr><img src = caracteres/C.png alt = C class = caractère>ouronnes<hr></h2>
-<table class = caché id = table-couronnes></table>
-<h2 onclick = afficher(this)><hr><img src = caracteres/H.png alt = H class = caractère>eaumes<hr></h2>
-<table class = caché id = table-heaumes></table>
-<h2 onclick = afficher(this)><hr><img src = caracteres/P.png alt = P class = caractère>articuliers<hr></h2>
-<table class = caché id = table-particuliers></table>
-<h2 onclick = afficher(this)><hr><img src = caracteres/É.png alt = É class = caractère>cus<hr></h2>
-<table class = caché id = table-écus></table>
-<h2 onclick = afficher(this)><hr><img src = caracteres/P.png alt = P class = caractère>ortants<hr></h2>
-<table class = caché id = table-portants></table>
-<h2 onclick = afficher(this)><hr><img src = caracteres/M.png alt = M class = caractère>anteaux<hr></h2>
-<table class = caché id = table-manteaux></table>
-<h2 onclick = afficher(this)><hr><img src = caracteres/C.png alt = C class = caractère>olliers<hr></h2>
-<table class = caché id = table-colliers></table>
-<h2 onclick = afficher(this)><hr><img src = caracteres/B.png alt = B class = caractère>âtons<hr></h2>
-<table class = caché id = table-bâtons></table>
+<h2 onclick = "afficher(this)"><hr><img src = "caracteres/P.png" alt = "P" class = "caractère">rofils<hr></h2>
+<table class = "caché" id = "table-profils"></table>
+<h2 onclick = "afficher(this)"><hr><img src = "caracteres/C.png" alt = "C" class = "caractère">ouronnes<hr></h2>
+<table class = "caché" id = "table-couronnes"></table>
+<h2 onclick = "afficher(this)"><hr><img src = "caracteres/H.png" alt = "H" class = "caractère">eaumes<hr></h2>
+<table class = "caché" id = "table-heaumes"></table>
+<h2 onclick = "afficher(this)"><hr><img src = "caracteres/P.png" alt = "P" class = "caractère">articuliers<hr></h2>
+<table class = "caché" id = "table-particuliers"></table>
+<h2 onclick = "afficher(this)"><hr><img src = "caracteres/É.png" alt = "É" class = "caractère haut">cus<hr></h2>
+<table class = "caché" id = "table-écus"></table>
+<h2 onclick = "afficher(this)"><hr><img src = "caracteres/P.png" alt = "P" class = "caractère">ortants<hr></h2>
+<table class = "caché" id = "table-portants"></table>
+<h2 onclick = "afficher(this)"><hr><img src = "caracteres/M.png" alt = "M" class = "caractère">anteaux<hr></h2>
+<table class = "caché" id = "table-manteaux"></table>
+<h2 onclick = "afficher(this)"><hr><img src = "caracteres/C.png" alt = "C" class = "caractère">olliers<hr></h2>
+<table class = "caché" id = "table-colliers"></table>
+<h2 onclick = "afficher(this)"><hr><img src = "caracteres/B.png" alt = "B" class = "caractère">âtons<hr></h2>
+<table class = "caché" id = "table-bâtons"></table>
 
 </body>
 </html>
