--- a/armoirie.html
+++ b/armoirie.html
@@ -39,7 +39,7 @@
 		<div id = "div-heaume"><img id = "img-heaume"></div>
 		<div class = "flex">
 			<div id = "div-portant-dextre">
-				<img src = "armoirie/vide.png" id = "img-portant-dextre" onclick = inverser(this.style)>
+				<img src = "armoirie/vide.png" id = "img-portant-dextre" onclick = "inverser(this.style)">
 			</div>
 			<div class = "flex"><img src = "armoirie/vide.png" id = "img-collier"><img id = "img-écu"></div>
 			<div id = "div-portant-senestre">
