--- a/armoirie.html
+++ b/armoirie.html
@@ -4,6 +4,7 @@
 	<title>Armoirie — Héraldix</title>
 	<meta charset = "utf-8">
 	<link rel = "icon" href = "caracteres/A.png">
+	<link rel = "stylesheet" href = "../lecavalierriant/lecavalierriant.css">
 	<link rel = "stylesheet" href = "heraldix.css">
 	<link rel = "stylesheet" href = "armoirie/armoirie.css">
 	<script src = "heraldix.js"></script>
