--- a/formulaire.html
+++ b/formulaire.html
@@ -4,6 +4,7 @@
 	<title>Formulaire — Héraldix</title>
 	<meta charset = "utf-8">
 	<link rel = "icon" href = "caracteres/F.png">
+	<link rel = "stylesheet" href = "../lecavalierriant/lecavalierriant.css">
 	<link rel = "stylesheet" href = "heraldix.css">
 	<link rel = "stylesheet" href = "formulaire/formulaire.css">
 	<script src = "heraldix.js"></script>
