--- a/heraldix.html
+++ b/heraldix.html
@@ -4,6 +4,7 @@
 	<title>Accueil — Héraldix</title>
 	<meta charset = "utf-8">
 	<link rel = "icon" href = "caracteres/H.png">
+	<link rel = "stylesheet" href = "../lecavalierriant/lecavalierriant.css">
 	<link rel = "stylesheet" href = "heraldix.css">
 	<script src = "heraldix.js"></script>
 </head>
