--- a/listes.html
+++ b/listes.html
@@ -4,6 +4,7 @@
 	<title>Liste — Héraldix</title>
 	<meta charset = "utf-8">
 	<link rel = "icon" href = "caracteres/L.png">
+	<link rel = "stylesheet" href = "../lecavalierriant/lecavalierriant.css">
 	<link rel = "stylesheet" href = "heraldix.css">
 	<link rel = "stylesheet" href = "listes/listes.css">
 	<script src = "heraldix.js"></script>
