--- a/armoirie.html
+++ b/armoirie.html
@@ -20,7 +20,7 @@
 	<script src = "armoirie/armoirie.js"></script>
 </head>
 <body onload = "initialiser()">
-<header>
+<div id = "aaa">
 	<a href = "heraldix.html"><img src = "heraldix.png" class = "logo"></a>
 	<h1></h1>
 	<a href = "formulaire.html"><button class = "important">Formulaire</button></a><br>
@@ -29,7 +29,7 @@
 	<button onclick = "sauvegarder()" class = "important">Sauvegarder</button><br>
 	<button onclick = "paramètres()" id = "button-paramètres">↓ Paramètres ↓</button>
 	<table class = "caché" id = "table-paramètres"></table>
-</header>
+</div>
 
 <div class = "flex" id = "div-contenu">
 	<div id = "div-manteau"><img src = "armoirie/vide.png" id = "img-manteau"></div>
