--- a/formulaire.html
+++ b/formulaire.html
@@ -22,12 +22,11 @@
 	<script src = "liens/portants.js"></script>
 </head>
 <body onload = "initialiser()">
-<header>
-	<a href = "heraldix.html"><img src = "heraldix.png" class = "logo"></a>
-	<h1><hr>Formulaire<hr></h1>
-	<a href = "formulaire.html"><button class = "important">Formulaire</button></a><br>
-	<a href = "listes.html"><button class = "important">Listes</button></a>
-</header>
+<a href = "heraldix.html"><img src = "heraldix.png" class = "logo"></a>
+<h1>Formulaire</h1>
+
+<a href = "formulaire.html"><button class = "important">Formulaire</button></a><br>
+<a href = "listes.html"><button class = "important">Listes</button></a>
 
 <fieldset>
 	<legend>Description héraldique</legend>
