--- a/heraldix.html
+++ b/heraldix.html
@@ -9,10 +9,8 @@
 	<script src = "heraldix.js"></script>
 </head>
 <body>
-<header>
-	<a href = "heraldix.html"><img src = "heraldix.png" class = "logo"></a>
-	<h1><hr>Héraldix<hr></h1>
-</header>
+<a href = "heraldix.html"><img src = "heraldix.png" class = "logo"></a>
+<h1>Héraldix</h1>
 
 <a href = "formulaire.html"><button class = "important">Formulaire</button></a>
 <br>
