--- a/listes.html
+++ b/listes.html
@@ -22,12 +22,11 @@
 	<script src = "listes/listes.js"></script>
 </head>
 <body onload = "initialiser()">
-<header>
-	<a href = "heraldix.html"><img src = "heraldix.png" class = "logo"></a>
-	<h1><hr>Listes<hr></h1>
-	<a href = "formulaire.html"><button class = "important">Formulaire</button></a><br>
-	<a href = "listes.html"><button class = "important">Listes</button></a>
-</header>
+<a href = "heraldix.html"><img src = "heraldix.png" class = "logo"></a>
+<h1>Listes</h1>
+
+<a href = "formulaire.html"><button class = "important">Formulaire</button></a><br>
+<a href = "listes.html"><button class = "important">Listes</button></a>
 
 <h2 onclick = "afficher(this)"><hr><img src = "caracteres/P.png" alt = "P" class = "caractère">rofils<hr></h2>
 <table class = "caché" id = "table-profils"></table>
