--- a/armoirie.html
+++ b/armoirie.html
@@ -26,7 +26,7 @@
 	<a href = "formulaire.html"><button class = "important">Formulaire</button></a><br>
 	<a href = "listes.html"><button class = "important">Listes</button></a><br>
 	<button onclick = "history.back()">↶ Page précédente</button><br>
-	<button onclick = "sauvegarder()" class = "important">Sauvegarder</button><br>
+	<button onclick = "window.print()" class = "important">Sauvegarder</button><br>
 	<button onclick = "paramètres()" id = "button-paramètres">↓ Paramètres ↓</button>
 	<table class = "caché" id = "table-paramètres"></table>
 </div>
